создана разметка шапки и блока inner, присвоены им стили

--- a/app/index.html
+++ b/app/index.html
@@ -8,13 +8,31 @@
 <body>
 	<!-- HEADER START -->
 	<div class="header">
-
+		<div class="conteiner">
+			<div class="logo">
+				<a href="#"><img src="img/logo.png" alt="">
+				</a>
+			</div>
+			<ul class="header-nav">
+				<li><a href="#">Articles</a></li>
+				<li><a href="#">Contect</a></li>
+				<li><a href="#"><span class="icon serch-ic"></span></a></li>
+			</ul>
+		</div>
 	</div>
 	<!-- HEADER END -->
 
 	<!-- MAIN START -->
 	<div class="main">
+		<div class="inner">
+			<div class="inner-block">
+				<h1>Find a Solicitor</h1>
+				<span>Access to justice made easier</span>
+				<div class="inner-form">
 		
+				</div>
+			</div>
+		</div>
 	</div>
 	<!-- MAIN END -->
 
