заданы стили для inner-form

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,13 @@
 				<h1>Find a Solicitor</h1>
 				<span>Access to justice made easier</span>
 				<div class="inner-form">
-		
+					<form>
+						<div class="first-form">
+							<input type="text" name="area" class="form-control" placeholder="Area of practice, e.g. commercial law">
+							<input type="text" name="countri" class="form-control" placeholder="County, city or postcode">
+							<input type="submit" value="SEARCH" class="form-btn">
+						</div>
+					</form>
 				</div>
 			</div>
 		</div>
