созданы и застилизированы блоки с текстом до карусели

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,80 @@
 				</div>
 			</div>
 		</div>
+		<div class="simple-text-block grey-bg">
+			<div class="conteiner">
+				<p>We provide access to over 15,000 qualified solicitors in the UK in 700 areas of international law. <a href="#" class="orange-text">Find a solicitor now</a></p>
+			</div>
+		</div>
+		<div class="service-wrap">
+			<div class="conteiner">
+				<div class="row">
+					<div class="service-item">
+						<span class="icon home-ic"></span>
+						<div class="title">
+							<span>Commercial property <span class="sub">(6298)</span></span>
+						</div>
+						<p>Lorem ipsum dolor sit amet est nonuti congresti magnium dort dolor sit amet artis scriptoriae portrudi.</p>
+					</div>
+					<div class="service-item">
+						<span class="icon keys-ic"></span>
+						<div class="title">
+							<span>Basiness and Commercial <span class="sub">(4293)</span></span>
+						</div>
+						<p>Lorem ipsum dolor sit amet est nonuti congresti magnium dort dolor sit amet artis scriptoriae portrudi.</p>
+					</div>
+					<div class="service-item">
+						<span class="icon admin-ic"></span>
+						<div class="title">
+							<span>Employment <span class="sub">(2305)</span></span>
+						</div>
+						<p>Lorem ipsum dolor sit amet est nonuti congresti magnium dort dolor sit amet artis scriptoriae portrudi.</p>
+					</div>
+					<div class="service-item">
+						<span class="icon commers-ic"></span>
+						<div class="title">
+							<span>Commercial litigation <span class="sub">(2590)</span></span>
+						</div>
+						<p>Lorem ipsum dolor sit amet est nonuti congresti magnium dort dolor sit amet artis scriptoriae portrudi.</p>
+					</div>
+					<div class="service-item">
+						<span class="icon hands-ic"></span>
+						<div class="title">
+							<span>Advocacy <span class="sub">(1774)</span></span>
+						</div>
+						<p>Lorem ipsum dolor sit amet est nonuti congresti magnium dort dolor sit amet artis scriptoriae portrudi.</p>
+					</div>
+					<div class="service-item">
+						<span class="icon apartmen-ic"></span>
+						<div class="title">
+							<span>Banking <span class="sub">(2190)</span></span>
+						</div>
+						<p>Lorem ipsum dolor sit amet est nonuti congresti magnium dort dolor sit amet artis scriptoriae portrudi.</p>
+					</div>
+					<div class="service-item">
+						<span class="icon people-ic"></span>
+						<div class="title">
+							<span>Children <span class="sub">(726)</span></span>
+						</div>
+						<p>Lorem ipsum dolor sit amet est nonuti congresti magnium dort dolor sit amet artis scriptoriae portrudi.</p>
+					</div>
+					<div class="service-item">
+						<span class="icon resident-ic"></span>
+						<div class="title">
+							<span>Residential conveyancing <span class="sub">(4293)</span></span>
+						</div>
+						<p>Lorem ipsum dolor sit amet est nonuti congresti magnium dort dolor sit amet artis scriptoriae portrudi.</p>
+					</div>
+					<div class="service-item">
+						<span class="icon crime-ic"></span>
+						<div class="title">
+							<span>Crime <span class="sub">(1883)</span></span>
+						</div>
+						<p>Lorem ipsum dolor sit amet est nonuti congresti magnium dort dolor sit amet artis scriptoriae portrudi.</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<!-- MAIN END -->
 
