созданы и застилезированы карусель и блок с blue-bg

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" type="text/css" href="css/slick.css"/>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -113,6 +114,64 @@
 				</div>
 			</div>
 		</div>
+		<div class="carousel-wrap">
+			<div class="conteiner">
+			<div class="title"><span>More Areas of Law <span class="sub">(46)</span></span>
+			</div>
+				<div class="law-slick law-slick-block">
+					<div>Employment <span class="sub">(182)</span></div>
+					<div>Banking <span class="sub">(295)</span></div>
+					<div>Crime <span class="sub">(154)</span></div>
+					<div>Family <span class="sub">(99)</span></div>
+					<div>Charities <span class="sub">(87)</span></div>
+					<div>Employment <span class="sub">(182)</span></div>
+					<div>Banking <span class="sub">(295)</span></div>
+					<div>Crime <span class="sub">(154)</span></div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="category-wrap blue-bg">
+			<div class="conteiner">
+				<div class="title">
+					<span>Legal articles, advice and help</span>
+				</div>
+				<div class="news-row">
+					<div class="news-post">
+						<div class="news-content">
+							<div class="title">
+								<span>Criminal Injuries Compensation</span>
+							</div>
+							<p>If you suffer injury as a victim of a crime involving violence then you may be eligible to apply to the Criminal Injuries Compensation Authority (CICA) for compensation. <a href="#" class="blue-text">Read More</a></p>
+						</div>
+					</div>
+					<div class="news-post">
+						<div class="news-content">
+							<div class="title">
+								<span>Things You Should Know About Divorce Laws in the US</span>
+							</div>
+							<p>If you suffer injury as a victim of a crime involving violence then you may be eligible to apply to the Criminal Injuries Compensation Authority... <a href="#" class="blue-text">Read More</a></p>
+						</div>
+					</div>
+					<div class="news-post">
+						<div class="news-content">
+							<div class="title">
+								<span>Criminal Injuries Compensation</span>
+							</div>
+							<p>If you suffer injury as a victim of a crime involving violence then you may be eligible to apply to the Criminal Injuries Compensation Authority (CICA) for compensation. <a href="#" class="blue-text">Read More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="title"><span>Categories</span></div>
+				<div class="category-btn">
+					<a href="#" class="btn white-btn">Driving <span class="sub">(4)</span></a>
+					<a href="#" class="btn white-btn">General Advice <span class="sub">(2)</span></a>
+					<a href="#" class="btn white-btn">Driving <span class="sub">(4)</span></a>
+					<a href="#" class="btn white-btn">General Advice <span class="sub">(2)</span></a>
+				</div>
+
+			</div>
+		</div>
 	</div>
 	<!-- MAIN END -->
 
@@ -124,6 +183,8 @@
 
 
 	<!-- jQuery -->
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+	<script type="text/javascript" src="../slick.min.js"></script>
+	<script src="../init.js"></script>
 </body>
 </html>
