создан блок поиска с orange-bg

--- a/app/index.html
+++ b/app/index.html
@@ -169,7 +169,36 @@
 					<a href="#" class="btn white-btn">Driving <span class="sub">(4)</span></a>
 					<a href="#" class="btn white-btn">General Advice <span class="sub">(2)</span></a>
 				</div>
-
+			</div>
+		</div>
+		<div class="country-inner">
+			<div class="conteiner">
+				<div class="title">
+					<span>Top Country</span>
+				</div>				
+				<div class="country-btn">
+					<a href="#" class="btn orange-btn">Greater London <span class="sub">(726)</span></a>
+					<a href="#" class="btn orange-btn">Greater Manchester <span class="sub">(726)</span></a>
+					<a href="#" class="btn orange-btn">West Midlands <span class="sub">(3150)</span></a>
+					<a href="#" class="btn orange-btn">West Yorkshire <span class="sub">(3150)</span></a>
+					<a href="#" class="btn orange-btn">Kent <span class="sub">(726)</span></a>
+					<a href="#" class="btn orange-btn">Hampshire <span class="sub">(726)</span></a>
+					<a href="#" class="btn orange-btn">Lancashire <span class="sub">(3150)</span></a>
+					<a href="#" class="btn orange-btn">Cheshire <span class="sub">(3150)</span></a>
+					<a href="#" class="btn orange-btn">Merseyside <span class="sub">(3150)</span></a>
+					<a href="#" class="btn orange-btn">Nottinghamshire <span class="sub">(242)</span></a>
+				</div>
+			</div>
+		</div>
+		<div class="find-country-inner">
+			<div class="conteiner">
+				<div class="find-block orange-bg">
+					<div class="vertical-middle"><span class="icon planet-ic"></span></div>
+					<div class="vertical-middle find-text-country"><span>Find a Solicitor In...</span></div>
+					<div class="vertical-middle country"><a href="#">England <span class="country-solicitors-text">3654 solicitors</span></a></div>
+					<div class="vertical-middle country"><a href="#">Wales <span class="country-solicitors-text">1980 solicitors</span></a></div>
+					<div class="vertical-middle country"><a href="#">Scotland <span class="country-solicitors-text">1980 solicitors</span></a></div>
+				</div>
 			</div>
 		</div>
 	</div>
