--- a/app/index.html
+++ b/app/index.html
@@ -119,14 +119,14 @@
 			<div class="title"><span>More Areas of Law <span class="sub">(46)</span></span>
 			</div>
 				<div class="law-slick law-slick-block">
-					<div>Employment <span class="sub">(182)</span></div>
-					<div>Banking <span class="sub">(295)</span></div>
-					<div>Crime <span class="sub">(154)</span></div>
-					<div>Family <span class="sub">(99)</span></div>
-					<div>Charities <span class="sub">(87)</span></div>
-					<div>Employment <span class="sub">(182)</span></div>
-					<div>Banking <span class="sub">(295)</span></div>
-					<div>Crime <span class="sub">(154)</span></div>
+					<div><a href="#">Employment <span class="sub">(182)</span></a></div>
+					<div><a href="#">Banking <span class="sub">(295)</span></a></div>
+					<div><a href="#">Crime <span class="sub">(154)</span></a></div>
+					<div><a href="#">Family <span class="sub">(99)</span></a></div>
+					<div><a href="#">Charities <span class="sub">(87)</span></a></div>
+					<div><a href="#">Employment <span class="sub">(182)</span></a></div>
+					<div><a href="#">Banking <span class="sub">(295)</span></a></div>
+					<div><a href="#">Crime <span class="sub">(154)</span></a></div>
 				</div>
 			</div>
 		</div>
@@ -194,10 +194,24 @@
 			<div class="conteiner">
 				<div class="find-block orange-bg">
 					<div class="vertical-middle"><span class="icon planet-ic"></span></div>
-					<div class="vertical-middle find-text-country"><span>Find a Solicitor In...</span></div>
-					<div class="vertical-middle country"><a href="#">England <span class="country-solicitors-text">3654 solicitors</span></a></div>
-					<div class="vertical-middle country"><a href="#">Wales <span class="country-solicitors-text">1980 solicitors</span></a></div>
+					<div class="vertical-middle find-text"><span>Find a Solicitor In...</span></div>
 					<div class="vertical-middle country"><a href="#">Scotland <span class="country-solicitors-text">1980 solicitors</span></a></div>
+					<div class="vertical-middle country"><a href="#">Wales <span class="country-solicitors-text">1980 solicitors</span></a></div>
+					<div class="vertical-middle country"><a href="#">England <span class="country-solicitors-text">3654 solicitors</span></a></div>
+				</div>
+			</div>
+		</div>
+		<div class="solicitor-login-wrap blue-bg">
+			<div class="conteiner">
+				<div class="solicitor-login-block">
+					<div class="solicitor-login-text">
+						<span class="title">Are you asolicitor?</span>
+						<p>Lorem ipsum dolorae caporium est artis scriptoraie dolor sit amet nonuti congrest magnium cartier excreteur doth paristi.</p>
+					</div>
+					<div class="login-btn">
+						<a href="#" class="btn white-btn">Sign up as Solicitor</a>
+						<a href="#" class="btn white-btn">Solicitor Login</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -206,7 +220,19 @@
 
 	<!-- FOOTER START -->
 	<div class="footer">
-		
+		<ul>
+			<li><a href="#">HOME</a></li>
+			<li><a href="#">ARTICLES</a></li>
+			<li><a href="#">CONTACT</a></li>
+			<li><a href="#">LOGIN</a></li>
+			<li><a href="#">TERMS</a></li>
+			<li><a href="#">COOKIES</a></li>
+		</ul>
+		<div class="logo">
+			<a href="#"><img src="img/logo.png" alt="">
+			</a>
+		</div>
+		<span>© Solicitors Guru 2015</span>
 	</div>
 	<!-- FOOTER END -->
 
